--- a/main.css
+++ b/main.css
@@ -123,6 +123,13 @@ a:visited {
     text-decoration: none;
 }
 
+.foreword {
+    text-align: center;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 footer {
     text-align: center;
 }
