--- a/main.css
+++ b/main.css
@@ -119,6 +119,10 @@ a:visited {
     background-color: #8e44ad;
 }
 
+.gufo-acme {
+    background-color: #27ae60;
+}
+
 .items a {
     text-decoration: none;
 }
