--- a/main.css
+++ b/main.css
@@ -127,6 +127,10 @@ a:visited {
     background-color: #9b59b6;
 }
 
+.gufo-thor {
+    background-color: #f1c40f;
+}
+
 .items a {
     text-decoration: none;
 }
