--- a/main.css
+++ b/main.css
@@ -115,6 +115,10 @@ a:visited {
     background-color: #16a085;
 }
 
+.gufo-http {
+    background-color: #2c3e50;
+}
+
 .gufo-agent {
     background-color: #8e44ad;
 }
